--- a/index.html
+++ b/index.html
@@ -1,203 +1,22 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pirate - Surveillance en Cours</title>
-    <style>
-        body {
-            font-family: "Courier New", Courier, monospace;
-            background-color: #111;
-            color: #00FF00;
-            text-align: center;
-            padding: 0;
-            margin: 0;
-            overflow: hidden;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-
-        h1 {
-            color: #FF0000;
-            font-size: 20px;
-            margin-top: 20px;
-        }
-
-        #terminal {
-            background-color: black;
-            width: 90vw;
-            height: 70vh;
-            padding: 20px;
-            border: 1px solid #00FF00;
-            font-size: 18px;
-            line-height: 1.5;
-            white-space: pre-wrap;
-            text-align: left;
-            margin-top: 20px;
-            overflow-y: scroll;
-            display: none;
-            color: #00FF00;
-        }
-
-        .countdown {
-            font-size: 36px;
-            color: #FF0000;
-            margin-top: 20px;
-            font-weight: bold;
-        }
-
-        .loading-bar-container {
-            margin-top: 20px;
-            width: 100%;
-            height: 30px;
-            background-color: #222;
-            border-radius: 5px;
-        }
-
-        .loading-bar {
-            width: 0;
-            height: 100%;
-            background-color: #00FF00;
-            border-radius: 5px;
-        }
-
-        .blackout {
-            display: none;
-            background-color: black;
-            color: white;
-            height: 100vh;
-            width: 100vw;
-            position: absolute;
-            top: 0;
-            left: 0;
-            text-align: center;
-            padding-top: 20%;
-            z-index: 1000;
-        }
-
-        .button {
-            background-color: #1e90ff;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: 18px;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-    </style>
-    <script>
-        let countdownTime = 15; // Compte à rebours à 15 secondes
-        let terminalContent = [
-            "Connexion à Apple Surveillance Network...",
-            "Échec de la vérification de l'authentification...",
-            "Détection d'une faille de sécurité majeure...",
-            "Activation du microphone et localisation en cours...",
-            "Recueilli : Position GPS | Données personnelles | Historique de navigation",
-            "Processus de piratage en cours...",
-            "Erreur : Accès illégal détecté !",
-            "Redémarrage imminent du système...",
-            "Erreur critique ! Vous êtes victime d'une attaque...",
-            "Téléphone éteint. Processus finalisés."
-        ];
-        let terminalIndex = 0;
-
-        function fakeHacking() {
-            // Cacher la séquence "Pirate en cours"
-            document.getElementById("pirateMessage").style.display = "none";
-
-            // Afficher le terminal de piratage
-            document.getElementById("terminal").style.display = "block";
-            showTerminalOutput();
-            startLoadingBar();
-            startCountdown();
-        }
-
-        function showTerminalOutput() {
-            if (terminalIndex < terminalContent.length) {
-                let terminal = document.getElementById("terminal");
-                terminal.innerHTML += terminalContent[terminalIndex] + "\n";
-                terminal.scrollTop = terminal.scrollHeight; // Défilement automatique
-                terminalIndex++;
-                setTimeout(showTerminalOutput, 1500); // Affiche les lignes une par une
-            } else {
-                setTimeout(phoneShutDown, 2000); // Attente avant de simuler l'extinction
-            }
-        }
-
-        function startLoadingBar() {
-            let loadingBar = document.getElementById("loadingBar");
-            let width = 0;
-            let loadingInterval = setInterval(function() {
-                if (width >= 100) {
-                    clearInterval(loadingInterval);
-                } else {
-                    width++;
-                    loadingBar.style.width = width + "%";
-                }
-            }, 50); // Le chargement se fait sur 5 secondes
-        }
-
-        function startCountdown() {
-            const countdownElement = document.getElementById('countdown');
-            countdownElement.innerHTML = `Votre téléphone va s'éteindre dans ${countdownTime} secondes...`;
-            const countdownInterval = setInterval(function() {
-                countdownTime--;
-                countdownElement.innerHTML = `Votre téléphone va s'éteindre dans ${countdownTime} secondes...`;
-                if (countdownTime <= 0) {
-                    clearInterval(countdownInterval);
-                    phoneShutDown();
-                }
-            }, 1000);
-        }
-
-        function phoneShutDown() {
-            const blackoutElement = document.getElementById('blackout');
-            const countdownElement = document.getElementById('countdown');
-            countdownElement.style.display = 'none';
-            blackoutElement.style.display = 'block';
-            blackoutElement.innerHTML = "<h1>Téléphone éteint</h1>";
-
-            setTimeout(function() {
-                blackoutElement.innerHTML = "<h1>Redémarrage du système...</h1>";
-                setTimeout(function() {
-                    blackoutElement.innerHTML = "<h1>Système redémarré avec succès.</h1>";
-                    setTimeout(function() {
-                        blackoutElement.style.display = "none";
-                    }, 3000); // Masque l'écran après un petit délai
-                }, 3000);
-            }, 3000); // Message de redémarrage après extinction
-        }
-    </script>
+  <meta charset="UTF-8">
+  <title>Test Caméra Mobile</title>
 </head>
 <body>
-
-    <h1>⚠️ ATTENTION : PIRATAGE EN COURS ⚠️</h1>
-    <p id="pirateMessage"><strong>Votre appareil est sous surveillance. Vos données sont compromises.</strong></p>
-    <p><strong>Cliquez sur le bouton ci-dessous pour voir les logs secrets et observer l'attaque en temps réel.</strong></p>
-
-    <a href="javascript:void(0);" class="button" onclick="fakeHacking()">Cliquez ici pour voir les logs secrets</a>
-
-    <!-- Terminal qui simule l'attaque -->
-    <div id="terminal"></div>
-
-    <!-- Barre de chargement pour l'effet de piratage -->
-    <div class="loading-bar-container">
-        <div id="loadingBar" class="loading-bar"></div>
-    </div>
-
-    <!-- Compte à rebours avant extinction -->
-    <p id="countdown" class="countdown"></p>
-
-    <!-- Écran noir simulant l'extinction du téléphone -->
-    <div id="blackout" class="blackout"></div>
-
-    <footer>
-        <p>© 2025 Piège Apple. Tous droits réservés.</p>
-    </footer>
-
+  <h2>Accès à la Caméra</h2>
+  <video id="video" width="300" autoplay playsinline></video>
+  <script>
+    navigator.mediaDevices.getUserMedia({ video: true })
+      .then(stream => {
+        const video = document.getElementById('video');
+        video.srcObject = stream;
+      })
+      .catch(error => {
+        console.error("Erreur d'accès à la caméra :", error);
+        alert("Impossible d'accéder à la caméra : " + error.message);
+      });
+  </script>
 </body>
 </html>
