--- a/index.html
+++ b/index.html
@@ -1,150 +1,174 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🎯 Devine le nombre !</title>
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <title>Jeu de Devinette - Version Ultime</title>
   <style>
     body {
-      background-color: #111;
-      color: #0f0;
-      font-family: 'Press Start 2P', monospace;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 40px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #222831, #393e46);
+      color: #eeeeee;
+      text-align: center;
+      padding: 30px;
     }
-    h1 {
-      font-size: 1.5rem;
-      margin-bottom: 20px;
+    .container {
+      max-width: 600px;
+      margin: auto;
+      background-color: #00adb5;
+      padding: 25px;
+      border-radius: 20px;
+      box-shadow: 0 0 30px rgba(0, 173, 181, 0.5);
     }
     input, button {
-      font-family: inherit;
-      font-size: 1rem;
-      padding: 10px;
+      padding: 12px;
+      font-size: 18px;
+      border-radius: 10px;
+      border: none;
       margin: 10px;
-      background: black;
-      border: 2px solid #0f0;
-      color: #0f0;
-      border-radius: 5px;
     }
-    .log {
-      margin-top: 30px;
-      width: 80%;
-      max-width: 600px;
-      height: 250px;
-      overflow-y: auto;
-      background: #000;
-      padding: 10px;
-      border: 2px solid #0f0;
-      white-space: pre-line;
+    button {
+      background-color: #393e46;
+      color: white;
+      cursor: pointer;
     }
     .hidden {
       display: none;
     }
-    .firework {
-      position: absolute;
-      width: 10px;
-      height: 10px;
-      background: yellow;
-      border-radius: 50%;
-      animation: explode 1s ease-out forwards;
+    #feedback {
+      font-size: 1.4em;
+      margin: 20px 0;
     }
-    @keyframes explode {
-      0% { transform: scale(1); opacity: 1; }
-      100% { transform: scale(5); opacity: 0; }
+    #log {
+      text-align: left;
+      margin-top: 20px;
+      max-height: 200px;
+      overflow-y: auto;
+      background-color: #eeeeee;
+      color: black;
+      padding: 10px;
+      border-radius: 10px;
+    }
+    #highscores {
+      margin-top: 20px;
+      background-color: #eeeeee;
+      color: black;
+      padding: 10px;
+      border-radius: 10px;
     }
   </style>
 </head>
-<body>
-  <h1>🎯 Devine le Nombre (1-100)</h1>
-  <div>
-    <input type="text" id="playerName" placeholder="Ton nom" required />
-    <button onclick="startGame()">Commencer</button>
-  </div>
-  <div id="game" class="hidden">
-    <p id="feedback"></p>
-    <input type="number" id="guess" placeholder="Devine..." />
-    <button onclick="checkGuess()">Essayer</button>
-    <button onclick="resetGame()">Rejouer</button>
-  </div>
-  <div class="log" id="log"></div>
 
-  <audio id="winSound" src="https://www.myinstants.com/media/sounds/stage-clear.mp3"></audio>
-  <audio id="failSound" src="https://www.myinstants.com/media/sounds/mario-death-sound.mp3"></audio>
+<body>
+  <div class="container">
+    <h1>🎯 Jeu de Devinette 🎯</h1>
+    <p>Devine le nombre secret !</p>
+    <input type="text" id="playerName" placeholder="Entre ton prénom" />
+    <button onclick="startGame()">Commencer</button>
+
+    <div id="game" class="hidden">
+      <p id="levelInfo">Niveau : 1</p>
+      <p id="attemptInfo">Tentatives : 0</p>
+      <input type="number" id="guess" placeholder="1 - 20" />
+      <button onclick="checkGuess()">Valider</button>
+      <p id="feedback"></p>
+      <div id="log"></div>
+    </div>
+
+    <div id="highscores">
+      <h3>🏆 Meilleurs scores</h3>
+      <ul id="scoreList"></ul>
+    </div>
+  </div>
+
+  <!-- Bruitage de victoire -->
+  <audio id="winSound" src="https://www.myinstants.com/media/sounds/stage-complete.mp3"></audio>
+  <!-- Musique de fond -->
+  <audio id="bgMusic" src="https://files.catbox.moe/uc4kgx.mp3" loop autoplay></audio>
 
   <script>
-    let secretNumber, attempts, player;
+    let secretNumber;
+    let attempts = 0;
+    let player = "";
+    let level = 1;
 
-    function logMessage(msg) {
-      const log = document.getElementById("log");
-      log.innerText += `> ${msg}\n`;
-      log.scrollTop = log.scrollHeight;
+    function getMaxRange(level) {
+      return 20 + (level - 1) * 30;
     }
 
     function startGame() {
       player = document.getElementById("playerName").value || "Joueur";
-      secretNumber = Math.floor(Math.random() * 100) + 1;
+      secretNumber = Math.floor(Math.random() * getMaxRange(level)) + 1;
       attempts = 0;
       document.getElementById("game").classList.remove("hidden");
-      logMessage(`Bienvenue ${player} ! Essaie de deviner le nombre secret.`);
-      localStorage.setItem('lastPlayer', player);
+      document.getElementById("guess").placeholder = `1 - ${getMaxRange(level)}`;
+      document.getElementById("feedback").innerText = "";
+      document.getElementById("log").innerHTML = "";
+      updateInfo();
+      document.getElementById("playerName").value = player;
+      logMessage(`🎮 Niveau ${level} | Devine un nombre entre 1 et ${getMaxRange(level)}`);
+      localStorage.setItem("lastPlayer", player);
     }
 
-    function showFireworks() {
-      for (let i = 0; i < 30; i++) {
-        const f = document.createElement("div");
-        f.className = "firework";
-        f.style.left = `${Math.random() * 100}%`;
-        f.style.top = `${Math.random() * 100}%`;
-        f.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 50%)`;
-        document.body.appendChild(f);
-        setTimeout(() => f.remove(), 1000);
-      }
+    function updateInfo() {
+      document.getElementById("levelInfo").innerText = `Niveau : ${level}`;
+      document.getElementById("attemptInfo").innerText = `Tentatives : ${attempts}`;
+    }
+
+    function logMessage(message) {
+      const log = document.getElementById("log");
+      log.innerHTML += `<p>> ${message}</p>`;
+      log.scrollTop = log.scrollHeight;
     }
 
     function checkGuess() {
-      const guess = parseInt(document.getElementById("guess").value);
-      attempts++;
-
-      if (isNaN(guess) || guess < 1 || guess > 100) {
-        logMessage("Entre un nombre valide entre 1 et 100.");
+      const guess = Number(document.getElementById("guess").value);
+      if (!guess || guess < 1 || guess > getMaxRange(level)) {
+        document.getElementById("feedback").innerText = `❗ Entrez un nombre entre 1 et ${getMaxRange(level)}`;
         return;
       }
 
+      attempts++;
+      updateInfo();
+
       if (guess === secretNumber) {
-        document.getElementById("feedback").innerText = `🎉 Bravo ${player} ! Trouvé en ${attempts} essais.`;
+        document.getElementById("feedback").innerText = `✅ Bravo ${player}, tu as trouvé en ${attempts} tentatives !`;
+        logMessage(`✅ Bien joué ${player} ! Tu passes au niveau ${level + 1}`);
+        saveHighscore(player, level);
         document.getElementById("winSound").play();
-        logMessage(`✅ ${player} a trouvé le bon nombre en ${attempts} tentatives !`);
-        localStorage.setItem(`score_${player}`, Math.min(attempts, getBestScore(player)));
-        showFireworks();
+        level++;
+        setTimeout(startGame, 2500);
       } else if (guess < secretNumber) {
-        document.getElementById("feedback").innerText = "📉 Trop petit !";
-        logMessage("Trop petit...");
-        document.getElementById("failSound").play();
+        document.getElementById("feedback").innerText = "🔼 Trop petit !";
       } else {
-        document.getElementById("feedback").innerText = "📈 Trop grand !";
-        logMessage("Trop grand...");
-        document.getElementById("failSound").play();
+        document.getElementById("feedback").innerText = "🔽 Trop grand !";
       }
     }
 
-    function getBestScore(player) {
-      return parseInt(localStorage.getItem(`score_${player}`)) || 999;
+    function saveHighscore(name, score) {
+      let scores = JSON.parse(localStorage.getItem("highscores")) || [];
+      scores.push({ name, score });
+      scores.sort((a, b) => b.score - a.score);
+      scores = scores.slice(0, 5);
+      localStorage.setItem("highscores", JSON.stringify(scores));
+      updateHighscores();
     }
 
-    function resetGame() {
-      document.getElementById("feedback").innerText = "";
-      document.getElementById("guess").value = "";
-      document.getElementById("log").innerText = "";
-      startGame();
+    function updateHighscores() {
+      const scoreList = document.getElementById("scoreList");
+      const scores = JSON.parse(localStorage.getItem("highscores")) || [];
+      scoreList.innerHTML = scores.map(s => `<li>${s.name} - Niveau ${s.score}</li>`).join("");
     }
 
-    window.onload = () => {
-      const last = localStorage.getItem('lastPlayer');
-      if (last) document.getElementById('playerName').value = last;
-    }
+    window.onload = function () {
+      const savedPlayer = localStorage.getItem("lastPlayer");
+      if (savedPlayer) {
+        document.getElementById("playerName").value = savedPlayer;
+      }
+      updateHighscores();
+    };
   </script>
 </body>
+
 </html>
